HW-5 - update user functionality
