# src/main/resources/api.yaml
@@ -28,19 +28,22 @@ paths:
       tags:
         - users
       requestBody:
-        required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: '#/components/schemas/User'
             examples:
-              user:
+              sample-user:
+                summary: Example
                 value:
-                  firstName: Gleb
-                  lastName: Egunov
+                  username: johndoe589
+                  firstName: John
+                  lastName: Doe
+                  email: bestjohn@doe.com
+                  phone: '+71002003040'
       responses:
         '201':
-          description: Null response
+          description: User created
         default:
           description: unexpected error
           content:
@@ -100,22 +103,70 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+    put:
+      tags:
+        - users
+      description: Update user with User ID supplied
+      operationId: updateUser
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: The id of the user to update
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+            examples:
+              sample-user:
+                summary: Example
+                value:
+                  firstName: Julie
+                  lastName: Doe
+                  email: bestjohn@doe.com
+                  phone: '+71004242424'
+
+      responses:
+        '200':
+          description: user updated
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     User:
       type: object
       required:
         - id
+        - username
         - firstName
         - lastName
+        - email
+        - phone
       properties:
         id:
           type: integer
           format: int64
+        username:
+          type: string
+          maxLength: 256
         firstName:
           type: string
         lastName:
           type: string
+        email:
+          type: string
+          format: email
+        phone:
+          type: string
+          format: phone
     Users:
       type: array
       items:
